Fix color contrast ratio issues
fixed the color contrast ratio issues on the description and primary class to improve the lighthouse accessibility score from 95 to 100

--- a/styles.css
+++ b/styles.css
@@ -9,9 +9,9 @@
 
 :root {
   --text-primary: #333;
-  --text-secondary: #7a7a7a;
+  --text-secondary: black;
   --text-light: #fff;
-  --primary-section: #f3f5f3;
+  --primary-section: white;
   --input-border: #d8d8da;
   --pass-border: #008000;
   --fail-border: #ff0000;
